# mega-amm-protocol

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml  Config.toml
cli/src/: main.rs  protocol_cli.rs  protocol_instructions.rs
idl/: mega_amm_protocol.json
program/: Cargo.toml
program/src/: lib.rs
program/src/helpers/: errors.rs  mod.rs
program/src/helpers/math_procs/: curve_ops.rs
program/src/instructions/: deposit.rs  initialize.rs  mod.rs  swap.rs  withdraw.rs
program/tests/: amm_full_test.rs
program/tests/common/: litesvm_deposit_tests.rs  litesvm_setup.rs  litesvm_swap_tests.rs  litesvm_withdraw_tests.rs
proptest-regressions/helpers/math_procs/: curve_ops.txt  numerical_ops.txt
src/: config.rs  instructions_idl.rs  lib.rs
src/helpers/: errors.rs  utils.rs
src/helpers/math_procs/: curve_ops.rs  mod.rs  numerical_ops.rs
src/instructions/: deposit.rs  initialize.rs  swap.rs  withdraw.rs
tests/: amm_full_test.rs
tests/common/: context.rs  litesvm_deposit_tests.rs  litesvm_setup.rs  litesvm_swap_tests.rs  litesvm_withdraw_tests.rs  mod.rs
tests/math/: mod.rs  numerical_tests.rs
wallets/: mint_x.json  mint_y.json  trader.json  vault.json
