[package]
name = "megaswap-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
borsh = "1.7.0"
clap = { version = "4.6.1", features = ["derive"] }
solana-client = "3.0.0"
solana-sdk = "3.0.0"
spl-associated-token-account = "8.0.0"
spl-token = "9.0.0"
# Helps us reuse code like types from the the protocol.
megaswap-protocol = { path = "../program" }
serde_json = "1.0.150"
shellexpand = "3.1.2"
solana-commitment-config = "3.1.1"
